--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,17 +1,19 @@
-image: Ubuntu
+image: Ubuntu  # образ для сборки
 
-stack: jdk 11
+stack: jdk 11  # версия JDK
 
 branches:
   only:
-    - main
+    - main  # ветка git
 
-build: off
+build: off  # будем использовать свой скрипт сборки
 
 install:
-    - java -jar ./artifacts/app-card-delivery.jar &
+  # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
+  - java -jar ./artifacts/app-card-delivery.jar &
 
 
 build_script:
-    - chmod +x gradlew
+  #  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - chmod +x gradlew
   - ./gradlew test --info "-Dselenide.headless=true"
